[feat] InitInterviewException 추가
